# gdpreport

./: .coverage  README.md  pyproject.toml
gdpreport/: cli.py  reader.py  reports.py  utils.py
tests/: test_cli.py  test_reader.py  test_reports.py  test_utils.py
