[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gdpreport"
version = "1.0.0"
description = "генератор отчетов по экономическим данным из csv файлов"
authors = [{name = "dnlsr", email = "dnlsr@example.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "tabulate>=0.9.0",
]

[project.scripts]
gdpreport = "gdpreport.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"